# cisstICP

./: .gitignore  LICENSE.txt  README.md  README.txt
Matlab_Registration/: IterateICP.m  algDirICP_Kent.m  algDirICP_StdICP.m  algDirICP_vMFG.m  algDirICP_vonMisesPrj.m  algICP_StdICP.m  algICP_TrimmedICP.m  objIterData.m
Matlab_Registration/Tests/: App_Test_Kent.m  App_Test_StdICP.m  App_Test_TrimmedICP.m
Matlab_Registration/Tests/TestData_StdICP/: SaveIterations.txt  SaveMesh.mesh  SaveNoisySamples.pts  SaveOffsetXfm.txt  SaveRegXfm.txt  SaveSampleCov.txt  SaveSamples.pts  SaveTrackRegPath.txt
cisstICP/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  DirPDTree2DBase.h  DirPDTree2D_Edges.cpp  DirPDTree2D_Edges.h  DirPDTree2D_Points.cpp  DirPDTree2D_Points.h  DirPDTreeBase.cpp  DirPDTreeBase.h  DirPDTreeNode.cpp  DirPDTree_Mesh.cpp  DirPDTree_Mesh.h  DirPDTree_PointCloud.cpp  DirPDTree_PointCloud.h  PDTreeBase.cpp  PDTreeBase.h  PDTreeNode.cpp  PDTree_Mesh.cpp  PDTree_Mesh.h  PDTree_PointCloud.h  RegisterP2P.cpp  TriangleClosestPointSolver.cpp  alg2D_DirICP.cpp  alg2D_DirICP.h  alg2D_DirICP_StdICP.cpp  alg2D_DirICP_StdICP.h  alg2D_DirICP_StdICP_Edges.h  alg2D_DirPDTree.h  alg2D_DirPDTree_CP.h  alg2D_DirPDTree_CP_Edges.h  alg2D_DirPDTree_vonMises.h  alg2D_DirPDTree_vonMises_Edges.cpp  alg2D_DirPDTree_vonMises_Edges.h  algDirICP.cpp  algDirICP.h  algDirICP_DIMLOP.cpp  algDirICP_DIMLOP.h  algDirICP_DIMLOP_dlibWrapper.cpp  algDirICP_DIMLOP_dlibWrapper.h  (+140 more)
cisstICP/ExtraAlgorithms/: algICP_IMLP_ClosestPoint.cpp  algICP_IMLP_ClosestPoint.h  algICP_IMLP_MahalDist.cpp  algICP_IMLP_MahalDist.h
cisstICP/matlabICP/: CMakeLists.txt  cisstAlgorithm2D_DirCovTree_CP_Edges_MexInterface.cpp  cisstAlgorithm2D_DirCovTree_CP_Edges_MexInterface.h  cisstAlgorithm2D_DirCovTree_vonMises_Edges_MexInterface.cpp  cisstAlgorithm2D_DirCovTree_vonMises_Edges_MexInterface.h  cisstAlgorithmCovTree_CP_Mesh_MexInterface.cpp  cisstAlgorithmCovTree_CP_Mesh_MexInterface.h  cisstAlgorithmCovTree_MLP_Mesh_MexInterface.cpp  cisstAlgorithmCovTree_MLP_Mesh_MexInterface.h  cisstAlgorithmDirICP_Kent_Mesh_MexInterface.cpp  cisstAlgorithmDirICP_Kent_Mesh_MexInterface.h  cisstAlgorithmDirICP_StdICP_Mesh_MexInterface.cpp  cisstAlgorithmDirICP_StdICP_Mesh_MexInterface.h  cisstAlgorithmDirICP_vMFG_Mesh_MexInterface.cpp  cisstAlgorithmDirICP_vMFG_Mesh_MexInterface.h  cisstAlgorithmDirICP_vonMisesPrj_Mesh_MexInterface.cpp  cisstAlgorithmDirICP_vonMisesPrj_Mesh_MexInterface.h  cisstAlgorithmICP_StdICP_Mesh_MexInterface.cpp  cisstAlgorithmICP_StdICP_Mesh_MexInterface.h  mexInterface_AlgDirICP_GIMLOP_Mesh.cpp  mexInterface_AlgDirICP_IMLOP_Mesh.cpp  mexInterface_AlgDirICP_PIMLOP_Mesh.cpp  mexInterface_AlgDirICP_StdICP_Mesh.cpp  mexInterface_AlgICP_StdICP_Mesh.cpp  mexInterface_AlgPDTree_CP_Mesh.cpp  mexInterface_AlgPDTree_CP_Mesh.h  mexInterface_AlgPDTree_MLP_Mesh.cpp  mexInterface_AlgPDTree_MLP_Mesh.h
cisstICP/matlabICP/TestApps/: App_Test_IMLOP.m  App_Test_StdICP.m
cisstICP/matlabICP/m/: algDirICP_GIMLOP.m  algDirICP_IMLOP.m  algDirICP_PIMLOP.m  algICP_StdICP.m  algICP_TrimmedICP.m  algOptimizer_Matlab_SE3Rodrigues.m  mexAlg2D_DirCovTree_CP_Edges_Interface.m  mexAlg2D_DirCovTree_vonMises_Edges_Interface.m  mexAlgCovTree_CP_Mesh_Interface.m  mexAlgCovTree_MLP_Mesh_Interface.m  mexAlgDirICP_Kent_Mesh_Interface.m  mexAlgDirICP_StdICP_Mesh_Interface.m  mexAlgDirICP_vMFG_Mesh_Interface.m  mexAlgDirICP_vonMisesPrj_Mesh_Interface.m  mexAlgICP_StdICP_Mesh_Interface.m  mexInterface_Alg2D_DirPDTree_CP_Edges.m  mexInterface_Alg2D_DirPDTree_vonMises_Edges.m  mexInterface_AlgDirICP_GIMLOP_Mesh.m  mexInterface_AlgDirICP_IMLOP_Mesh.m  mexInterface_AlgDirICP_PIMLOP_Mesh.m  mexInterface_AlgICP_StdICP_Mesh.m  mexInterface_AlgPDTree_CP_Mesh.m  mexInterface_AlgPDTree_MLP_Mesh.m
cisstICP/matlabICP/m/utilities/: App_MeshComputeProperties.m  ply_read2.m  ply_write2.m
cisstICP_App/: CMakeLists.txt  CmdLineParser.cpp  CmdLineParser.h  CmdLineParser.inl  main.cpp  testICP.h  testICPNormals.h  utility.cpp  utility.h
cisstICP_App/tests/: compare_outputs.m  compare_outputs_script.m
dependencies/Matlab Dependencies/PLY_IO/: ply_read.m  ply_write.asv
test_data/: MT.ply  ProximalFemur.ply  Warped_MT_recentered.mesh  Warped_MTn.ply
test_data/LastRun/: .gitignore
test_data/LastRun_DIMLOP/testing/: Pts.ply  SaveCov.pts  SaveIterations.csv  SaveIterations.txt  SaveNoisySamples  SaveRegXfm.txt  SaveSamples  SaveTrackRegPath.csv  finalMesh.ply  finalPts.ply  finalRegMesh.ply  initPts.ply
test_data/LastRun_DIMLP/testing/: Pts.ply  SaveIterations.csv  SaveIterations.txt  SaveNoisySamples.pts  SaveRegXfm.txt  SaveTrackRegPath.csv  estimatedMesh.ply  finalMesh.ply  finalPts.ply  finalRegMesh.ply  initPts.ply
test_data/LastRun_GDIMLOP/testing/: EccPts.ply  Pts.ply  SaveCov.pts  SaveEccNoisySamples  SaveIterations.csv  SaveIterations.txt  SaveNoisySamples  SaveRegXfm.txt  SaveTrackRegPath.csv  finalMesh.ply  finalPts.ply  finalRegMesh.ply  initPts.ply  saveModeWeights.txt
test_data/LastRun_GIMLOP/testing/: EccPts.ply  Pts.ply  SaveEccL.pts  SaveEccNoisySamples  SaveIterations.csv  SaveIterations.txt  SaveL.pts  SaveNoisySamples  SaveRegXfm.txt  SaveTrackRegPath.csv  finalPts.ply  finalRegMesh.ply  initPts.ply
test_data/LastRun_IMLOP/testing/: SaveIterations.csv  SaveIterations.txt  SaveNoisySamples  SaveRegXfm.txt  SaveTrackRegPath.csv  finalPts.ply  finalRegMesh.ply
test_data/LastRun_IMLP/testing/: Pts.ply  SaveIterations.csv  SaveIterations.txt  SaveNoisySamples.pts  SaveRegXfm.txt  SaveTrackRegPath.csv  finalMesh.ply  finalPts.ply  finalRegMesh.ply  initPts.ply
test_data/LastRun_PIMLOP/testing/: Pts.ply  SaveIterations.csv  SaveIterations.txt  SaveL.pts  SaveOffsetXfm.txt  SaveRegXfm.txt  SaveSamples  SaveTrackRegPath.csv  finalPts.ply  finalRegMesh.ply  initPts.ply
